fix flavor overflow style
Type: BF
Jira: HALO-1247

--- a/client/applications/approval/modules/instance/pop/resize/style/index.less
+++ b/client/applications/approval/modules/instance/pop/resize/style/index.less
@@ -60,6 +60,7 @@
       .dropdown-box {
         width: 100%;
         .dropdown-item {
+          width: 575px;
           &:not(:first-child) {
             margin-top: 6px;
           }
